@@ -1,5 +1,7 @@
 *SVN*
 
+* FastCGI handler ignores unsupported signals like USR2 on Windows.  [Grzegorz Derebecki]
+
 * Only load ActionMailer::TestCase if ActionMailer is loaded.  Closes #10137 [defunkt]
 
 * Fixed that db:reset would use migrations instead of loading db/schema.rb [DHH]
